packages/build/tests/error/fixtures/cancel_post_deploy/plugin.js
export default {
  onEnd({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
